--- a/app/views/boxes/edit.html.slim
+++ b/app/views/boxes/edit.html.slim
@@ -1,7 +1,7 @@
 .container-fluid ng-controller='ConfigurationController' ng-init="downloadConfiguration('#{box_url(@box, format: 'json')}')"
   .row
     .col-lg-11.col-lg-offset-1
-      h1 Edit <kbd>#{@box.name}</kbd> railsbox
+      h1 Edit <kbd>#{@box.vm_name}</kbd> railsbox
   form role='form' method='post' action=box_path(@box)
     input type='hidden' name='_method' value='put'
     = token_tag nil
