--- a/app/views/boxes/show.html.slim
+++ b/app/views/boxes/show.html.slim
@@ -1,7 +1,7 @@
 .container-fluid
   .row
-    .col-lg-6
-      h1 Your virtual box: <kbd>#{@box.name}</kbd>
+    .col-lg-5
+      h1 Your virtual box: <kbd>#{@box.vm_name}</kbd>
       p Make sure you bookmark this page (or save URL somewhere), it's the only way to access your configuration later.
       p
         input.form-control data-copies-itself='yes' id='url' type='text' value=box_url(@box)
@@ -10,20 +10,60 @@
         a.btn.btn-primary.btn-lg role='button' href=download_box_url(@box) = t('.download')
         ' 
         a.btn.btn-default.btn-lg role='button' href=edit_box_url(@box) = t('.edit')
-    .col-lg-6
+      h2 Customization
+      p Feel free to customize ansible playbooks as you need. But keep in mind that your changes may be lost if you decide to re-generate configuration using Edit button. Probably it will be best if you keep your customizations in a separate roles which names do not overlap with the playbooks provided by railsbox.
+
+    .col-lg-7
       h1 What's next?
 
-      h2 Download
-      p Go ahead and place your downloaded box to your Ruby on Rails project directory. Then unarchive it. <kbd>devops</kbd> directory will be created with the following structure:
+      h2 Install requirements
+      p You will need <a href="https://www.virtualbox.org/wiki/Downloads">VirtualBox</a>, <a href="https://www.vagrantup.com/downloads.html">vagrant</a> and <a href="http://docs.ansible.com/intro_installation.html">ansible</a> to be installed. ansible also requires Python and some Python modules to be installed.
+
+      h2 Unzip
+      p Go ahead and copy your downloaded box to your Ruby on Rails project directory.
       p
         pre
-          | devops/
-              ansible/
-              Vagrantfile
+          | cp ~/Downloads/#{@box.vm_name}-railsbox.zip /path/to/rails/project/
+      p Then unarchive it. 
+      p
+        pre
+          | cd /path/to/rails/project
+            unzip #{@box.vm_name}-railsbox.zip
+      p <kbd>devops</kbd> directory will be created. Your project structure will be like:
+      p
+        pre
+          | project/
+              app
+              bin
+              ...
+              devops/
+                ansible/
+                Vagrantfile
+              Gemfile
+              ...
 
-      h2 Requirements
-      p You will need <a href="https://www.virtualbox.org/wiki/Downloads">VirtualBox</a>, <a href="https://www.vagrantup.com/downloads.html">vagrant</a> and <a href="http://docs.ansible.com/intro_installation.html">ansible</a> to be installed.
 
-      h2 Run
+      h2 Bootstrap VM
       p Go to the <kbd>devops</kbd> directory and type <kbd>vagrant up</kbd>. vagrant will download the base box and provision it with ansible using your configuration.
+      p
+        pre
+          | cd /path/to/rails/project/devops
+            vagrant up
       p Once it's done, you'll be able to login into it using <kbd>vagrant ssh</kbd> command. Your application is stored in <kbd>/vagrant</kbd> directory.
+
+      h2 Control
+      h3 VM
+      p Virtual machine can be controlled by running the following commands:
+      p
+        pre
+          | vagrant up                      # To start VM
+            vagrant provision               # To re-run ansible playbook
+            vagrant halt                    # To stop VM
+            vagrant destroy                 # To destroy VM completely
+      h3 unicorn
+      p You can start and stop unicorn by running standard upstart commands:
+      p
+        pre
+          | sudo start #{@box.vm_name}
+            sudo stop #{@box.vm_name}
+            sudo restart #{@box.vm_name}
