--- a/app/views/boxes/show.html.slim
+++ b/app/views/boxes/show.html.slim
@@ -49,7 +49,8 @@
         pre
           | cd /path/to/rails/project/devops
             vagrant up
-      p Once it's done, you'll be able to login into it using <kbd>vagrant ssh</kbd> command. Your application is stored in <kbd>/vagrant</kbd> directory.
+      p Note that vagrant may ask for a sudo password. That's required when you're using NFS for folder synchronization.
+      p Once it's done, you'll be able to login into it using <kbd>vagrant ssh</kbd> command. Your application is stored in <kbd>#{@box.vm_shared_directory}</kbd> directory.
 
       h2 Control
       h3 VM
