--- a/app/views/boxes/_form.html.slim
+++ b/app/views/boxes/_form.html.slim
@@ -106,12 +106,12 @@ a.anchor#app-settings
           .col-lg-2
             label Install Ruby with
             .form-group
-              .radio ng-repeat='(k, v) in rubyInstalls'
+              .radio ng-repeat='k in ["rvm", "package"]'
                 label
                   input name='ruby_install' type='radio' value='{{ k }}' ng-model='configuration.ruby_install'
-                  ' {{ v.label }}
+                  ' {{ rubyInstalls[k].label }}
 
-          .col-lg-4
+          .col-lg-3
             .form-group
               label for='ruby_version' Ruby version
               p ng-show='configuration.ruby_install == "package"'
@@ -119,8 +119,13 @@ a.anchor#app-settings
               p ng-show='configuration.ruby_install == "rvm"'
                 small ruby will be installed with <a href="https://rvm.io/">RVM</a>.
               select.form-control id='ruby_version' name='ruby_version' ng-options='rubyVersion.label for rubyVersion in rubyInstalls[configuration.ruby_install].rubies track by rubyVersion.version' ng-model='configuration.ruby_version'
-
-          .col-lg-6
+          .col-lg-2
+            .form-group ng-show='configuration.ruby_install == "rvm"'
+              label for='manual_ruby_version' Other version
+              p
+                small Specify custom ruby version
+              input.form-control type='text' placeholder='ruby version' name='manual_ruby_version' id='manual_ruby_version' ng-model='configuration.manual_ruby_version'
+          .col-lg-5
             .form-group
               label for='environment_file' Environment variables
               p
