Larger add buttons

--- a/app/views/boxes/_form.html.slim
+++ b/app/views/boxes/_form.html.slim
@@ -142,7 +142,7 @@ a.anchor#databases
         h2.panel-title Databases, caching and search
       .panel-body
         .dropdown ng-hide='allActive()'
-          button.btn.btn-default.dropdown-toggle type='button' data-toggle='dropdown' id='databasesMenu'
+          button.btn.btn-lg.btn-default.dropdown-toggle type='button' data-toggle='dropdown' id='databasesMenu'
             ' Add database
             span.caret
           ul.dropdown-menu role='menu' aria-labelledby='databasesMenu'
@@ -168,7 +168,7 @@ a.anchor#background-jobs
         h2.panel-title Background jobs
       .panel-body
         .dropdown ng-hide='allActive()'
-          button.btn.btn-default.dropdown-toggle type='button' data-toggle='dropdown' id='backgroundJobsMenu'
+          button.btn.btn-lg.btn-default.dropdown-toggle type='button' data-toggle='dropdown' id='backgroundJobsMenu'
             ' Add worker
             span.caret
           ul.dropdown-menu role='menu' aria-labelledby='backgroundJobsMenu'
