--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -21,6 +21,8 @@ html lang="en"
             li
               a href='#app-settings' Application
             li
+              a href='#server' Server
+            li
               a href='#databases' Databases
             li
               a href='#background-jobs' Background Jobs
