Add link to GitHub in footer

--- a/app/assets/stylesheets/all/layout.css.scss
+++ b/app/assets/stylesheets/all/layout.css.scss
@@ -7,6 +7,12 @@ footer {
   @include dark-background;
   padding: 50px 0px;
 
+  ul {
+    li {
+      margin-right: 20px;
+    }
+  }
+
   p {
     margin: 0px;
   }
