--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -32,4 +32,9 @@ html lang="en"
 
     footer
       .container
-        p Created by <a href="https://github.com/andreychernih">Andrey Chernih</a>
+        ul.list-inline
+          li Created by <a href="https://github.com/andreychernih">Andrey Chernih</a>
+          li
+            a href='https://github.com/andreychernih/railsbox' GitHub
+          li
+            a href='https://github.com/andreychernih/railsbox/issues' Issues
