--- a/devops/roles/nginx/templates/nginx.conf.j2
+++ b/devops/roles/nginx/templates/nginx.conf.j2
@@ -28,3 +28,9 @@ server {
   client_max_body_size 4G;
   keepalive_timeout 10;
 }
+
+server {
+  listen 80;
+  server_name www.{{ server_name }};
+  return 301 http://{{ server_name }}$request_uri;
+}
