--- a/app/views/boxes/background_jobs/_sidekiq.html.slim
+++ b/app/views/boxes/background_jobs/_sidekiq.html.slim
@@ -2,9 +2,9 @@
   .col-lg-6
     .form-group
       label for='sidekiq_app_name' Service name
-      input.form-control id='sidekiq_app_name' name='box[sidekiq_app_name]' type='text' ng-model='configuration.sidekiq_app_name'
+      input.form-control id='sidekiq_app_name' name='box[sidekiq_app_name]' type='text' ng-model='configuration.sidekiq_app_name' ng-disabled='!isActive("sidekiq")'
   .col-lg-6
     .form-group
       label for='sidekiq_command' Command to start sidekiq
-      input.form-control id='sidekiq_command' name='box[sidekiq_command]' type='text' ng-model='configuration.sidekiq_command'
+      input.form-control id='sidekiq_command' name='box[sidekiq_command]' type='text' ng-model='configuration.sidekiq_command' ng-disabled='!isActive("sidekiq")'
 p System service <kbd>{{ configuration.sidekiq_app_name }}</kbd> will be created. You can control it by running the following commands: <kbd>sudo stop {{ configuration.sidekiq_app_name }}</kbd>, <kbd>sudo start {{ configuration.sidekiq_app_name }}</kbd>, <kbd>sudo restart {{ configuration.sidekiq_app_name }}</kbd>.
