--- a/app/views/boxes/databases/_postgresql.html.slim
+++ b/app/views/boxes/databases/_postgresql.html.slim
@@ -6,22 +6,22 @@
       .col-lg-4
         .form-group
           label for='postgresql_db_name' Database Name
-          input.form-control id='postgresql_db_name' name='box[postgresql_db_name]' type='text' ng-model='configuration.postgresql_db_name'
+          input.form-control id='postgresql_db_name' name='box[postgresql_db_name]' type='text' ng-model='configuration.postgresql_db_name' ng-disabled='!isActive("postgresql")'
       .col-lg-4
         .form-group
           label for='postgresql_db_user' Database User
-          input.form-control id='postgresql_db_user' name='box[postgresql_db_user]' type='text' ng-model='configuration.postgresql_db_user'
+          input.form-control id='postgresql_db_user' name='box[postgresql_db_user]' type='text' ng-model='configuration.postgresql_db_user' ng-disabled='!isActive("postgresql")'
       .col-lg-4
         .form-group
           label for='postgresql_db_password' Database Password
-          input.form-control id='postgresql_db_password' name='box[postgresql_db_password]' type='text' placeholder='optional' ng-model='configuration.postgresql_db_password'
+          input.form-control id='postgresql_db_password' name='box[postgresql_db_password]' type='text' placeholder='optional' ng-model='configuration.postgresql_db_password' ng-disabled='!isActive("postgresql")'
     .row
       .col-lg-12
         .form-group
           label Extensions
           .checkbox ng-repeat='ext in postgresqlExtensions'
             label
-              input type='checkbox' name='box[postgresql_extensions][]' value='{{ ext.name }}' ng-model='ext.selected'
+              input type='checkbox' name='box[postgresql_extensions][]' value='{{ ext.name }}' ng-model='ext.selected' ng-disabled='!isActive("postgresql")'
               ' {{ ext.name }}
 
 = render 'boxes/databases/sql_config'
