--- a/app/views/boxes/edit.html.slim
+++ b/app/views/boxes/edit.html.slim
@@ -7,4 +7,4 @@
     = token_tag nil
     = render layout: 'boxes/form', locals: { action: :update } do
         a.btn.pull-left.btn.btn-default.btn-lg href=box_url(@box) = t('.back')
-        button.pull-right.btn.btn-primary.btn-lg= t('.edit')
+        button.pull-right.btn.btn-primary.btn-lg data-disable-with='Wait...' = t('.edit')
